# solve_nivp

./: .gitignore  1d_fric_ex.ipynb  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SUPPORT.md  analytical.py  pyproject.toml  setup.py
.github/workflows/: draft-pdf.yml
RL_Adaption/2D_FAULT/: 2D_eval.ipynb  2d_Fault.ipynb  2d_Fault_EVAL.ipynb  2d_Fault_TRAINER.ipynb  2d_Fault_TRANSFER.ipynb  2d_Fault_stepper.ipynb  TQC_vec_adaptive_timestepping.pkl  eval_results_1x1.json  eval_results_25x25.json  eval_results_3by3_100x100.json  eval_results_3by3_25x25.json  eval_results_3by3_50x50.json  eval_results_3by3_75x75.json  eval_results_50x50.json  eval_results_5by5_100x100.json  eval_results_5by5_25x25.json  eval_results_5by5_50x50.json  eval_results_5by5_75x75.json  eval_results_5by5_PI_100x100.json  eval_results_5by5_PI_25x25.json  eval_results_5by5_PI_50x50.json  eval_results_5by5_PI_75x75.json  eval_results_5by5_P_25x25.json  eval_results_5by5_P_50x50.json  eval_results_75x75.json  eval_results_PI_100x100.json  eval_results_PI_25x25.json  eval_results_PI_50x50.json  eval_results_PI_75x75.json  eval_results_RESUMED_100x100.json  eval_results_RESUMED_25x25.json  eval_results_RESUMED_50x50.json  eval_results_RESUMED_5by5_100x100.json  eval_results_RESUMED_5by5_25x25.json  eval_results_RESUMED_5by5_50x50.json  eval_results_RESUMED_5by5_75x75.json  eval_results_RESUMED_75x75.json  eval_results_TD3_3by3_25x25.json  (+3 more)
Solve_IVP_NS/: ODESolver.py  ODESystem.py  __init__.py  _selftest.py  adaptive_integrator.py  integrations.py  nonlinear_solvers.py  projections.py
Solve_IVP_NS.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
examples/: 00_quickstart_scalar.ipynb  1d_fric_ex.ipynb  bouncing_ball.ipynb  soc_backward_euler.ipynb  supertwisting_stc_demo.ipynb
paper/: biblio.bib  manuscript.md  paper.bib  paper.md
solve_nivp/: ODESystem.py  __init__.py  _numba_accel.py  _selftest.py  adaptive_integrator.py  nonlinear_solvers.py  projections.py
tests/: test_coulomb_projection.py  test_coulomb_projection_jacobian.py  test_globalization.py  test_import_and_api.py  test_integrators_added.py  test_nonlinear_solvers_added.py  test_projection_batch_equivalence.py  test_projections_added.py  test_sparse_semismooth_newton.py  test_threading_time_and_fk.py
(+118 files in other folders)
