[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Solve_IVP_NS"
version = "0.1.0"
description = "A solver package for implicit ODEs and projection-based solvers"
authors = [
  { name = "David Riley" }
]
dependencies = [
  "numpy>=1.20",
  "scipy>=1.8",
]

[project.optional-dependencies]
test = [
  "pytest>=7",
]
rl = [
  "gymnasium>=0.29",
  "stable-baselines3>=2.2",
  "sb3-contrib>=2.2",
  "matplotlib>=3.5",
]

[project.scripts]
solve_ivp_ns-selftest = "Solve_IVP_NS._selftest:main"

