[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solve_nivp"
version = "0.1.0"
description = "A solver package for implicit ODEs and projection-based solvers"
authors = [
  { name = "David Riley" }
]
dependencies = [
  "numpy>=1.20",
  "scipy>=1.8",
]

[project.optional-dependencies]
test = [
  "pytest>=7",
]
rl = [
  "gymnasium>=0.29",
  "stable-baselines3>=2.2",
  "sb3-contrib>=2.2",
  "matplotlib>=3.5",
]
docs = [
  "sphinx>=6",
  "sphinx-rtd-theme>=1.2",
]

[project.scripts]
solve_nivp-selftest = "solve_nivp._selftest:main"

[project.urls]
Homepage = "https://github.com/ERC-INJECT/solve_nivp"
Documentation = "https://github.com/ERC-INJECT/solve_nivp/tree/main/docs"
Issues = "https://github.com/ERC-INJECT/solve_nivp/issues"

